Refactoring concerning Dependency Injection and responsibilities of beans. Extension of work on APIs.

--- a/src/main/resources/config/rating.properties
+++ b/src/main/resources/config/rating.properties
@@ -1,3 +1,4 @@
-url=http://localhost:8000
+dynamodbUrl=http://localhost:8000
 amazonAccessKey=AKIAIOSFODNN7EXAMPLE
+baseUrl=http://localhost:8080/localpress/
 ## halli hallo
