--- a/src/main/resources/config/rating.properties
+++ b/src/main/resources/config/rating.properties
@@ -1,4 +1,6 @@
 dynamodbUrl=http://localhost:8000
-amazonAccessKey=AKIAIOSFODNN7EXAMPLE
+amazonAccessKey=AKIAJO74CRKJUZID52TA
+amazonSecretKey=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
 baseUrl=http://localhost:8080/localpress/
+#baseUrl=52.29.77.191/localpress/
 ## halli hallo
